# Custom2kinter

./: AGENTS.md  CLAUDE.md  Readme.md  pyproject.toml
.github/workflows/: tests.yml
customtkinter/: __init__.py
customtkinter/assets/themes/: blue.json  dark-blue.json  gold.json  green.json
customtkinter/windows/: ctk_input_dialog.py  ctk_tk.py  ctk_toplevel.py
customtkinter/windows/widgets/: __init__.py  ctk_button.py  ctk_checkbox.py  ctk_combobox.py  ctk_entry.py  ctk_floating_frame.py  ctk_frame.py  ctk_label.py  ctk_optionmenu.py  ctk_progressbar.py  ctk_radiobutton.py  ctk_scrollable_frame.py  ctk_scrollbar.py  ctk_segmented_button.py  ctk_slider.py  ctk_spinbox.py  ctk_switch.py  ctk_symbolbox.py  ctk_tabview.py  ctk_textbox.py  ctk_togglebutton.py  ctk_tooltip.py
customtkinter/windows/widgets/appearance_mode/: appearance_mode_base_class.py  appearance_mode_tracker.py
customtkinter/windows/widgets/core_rendering/: __init__.py  ctk_canvas.py  draw_engine.py
customtkinter/windows/widgets/core_widget_classes/: __init__.py  ctk_base_class.py  ctk_container.py  ctk_scrollable.py  ctk_toggleable.py  ctk_widget.py  dropdown_menu.py  nested_widgets.py
customtkinter/windows/widgets/font/: __init__.py  ctk_font.py  font_manager.py
customtkinter/windows/widgets/image/: ctk_image.py
customtkinter/windows/widgets/scaling/: scaling_base_class.py  scaling_tracker.py
customtkinter/windows/widgets/theme/: __init__.py  theme_manager.py
customtkinter/windows/widgets/utility/: __init__.py  utility_functions.py
docs/: testing-plan.md
examples/: complex_example.py  custom_theme_example.py
test/: README.md  conftest.py
test/behavioral/: test_geometry_parsing.py  test_monitor.py  test_scaling.py  test_theme_loading.py
test/manual_integration_tests/: test_optionmenu_combobox.py  test_segmented_button.py  test_vertical_widgets.py
test/unit/: test_ctk.py  test_ctk_entry.py  test_ctk_toplevel.py  test_widget_smoke.py
test/util/: reset.py
