[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom2kinter"
version = "5.3.0"
authors = [
   {name="Tom Schimansky"},
   {name="Federico Spada"},
]
maintainers = [
   {name="Federico Spada"},
]
description = "Create modern looking GUIs with Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3.14",
   "Development Status :: 5 - Production/Stable",
   "Operating System :: OS Independent",
   "Intended Audience :: Developers",
]
dependencies = [
   "darkdetect",
   "typing_extensions",
   "packaging",
   "pillow",
]
keywords = ["GUI", "Tkinter", "simple", "modern"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/FedericoSpada/Custom2kinter"
Changelog = "https://github.com/FedericoSpada/Custom2kinter/blob/master/CHANGELOG.md"
Issues = "https://github.com/FedericoSpada/Custom2kinter/issues"
Documentation = "https://customtkinter.tomschimansky.com/documentation"

[tool.setuptools]
packages = [
   "customtkinter",
   "customtkinter.windows",
   "customtkinter.windows.widgets",
   "customtkinter.windows.widgets.appearance_mode",
   "customtkinter.windows.widgets.core_rendering",
   "customtkinter.windows.widgets.core_widget_classes",
   "customtkinter.windows.widgets.font",
   "customtkinter.windows.widgets.image",
   "customtkinter.windows.widgets.scaling",
   "customtkinter.windows.widgets.theme",
   "customtkinter.windows.widgets.utility",
]

[tool.tbump]
github_url = "https://github.com/FedericoSpada/Custom2kinter"

[tool.tbump.version]
current = "5.3.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"
search = "version = \"{current_version}\""

[[tool.tbump.file]]
src = "customtkinter/__init__.py"
search = "__version__ = \"{current_version}\""
